@@ -1,3 +1,7 @@
+=== Current
+
+ * Fixed about response for classifier.
+ 
 === 1.1.4 (24 March 2008)
 
  * Fixed default load_item_since time. Forgotten before.
